2007-11-19  Sergey Poznyakoff  <gray@gnu.org.ua>

	* include/mailutils/cfg.h (mu_cfg_parser_verbose): New variable.
	* include/mailutils/libargp.h (OPT_RCFILE_VERBOSE): New value.
	* libargp/Makefile.am (AM_CFLAGS): Rename to AM_CPPFLAGS, define
	SYSCONFDIR.
	* libargp/common.c (mu_common_argp, mu_common_argp_parser): New
	option rcfile-verbose. 
	* mailbox/Makefile.am (AM_CPPFLAGS): define SYSCONFDIR.
	* mailbox/cfg_lexer.c (_mu_parse_config): Implement `include'
	statement. Add verbose logging.
	* mailbox/cfg_parser.y (mu_cfg_parser_verbose): New variable.
	(mu_cfg_parse): Zero out parse_tree before returning.
	(_scan_tree_helper): Remove dependency on MU_CONFIG_VERBOSE envar.
	Use mu_cfg_parser_verbose instead.

	* config/mailutils.m4: New file
	* config/Makefile.am: Install mailutils.m4 to $(datadir)/aclocal

	* configure.ac (VI_CURRENT): Raise to 3;
	(MU_APP_LIBRARIES): Rename libargp.a to libmuargp.a
	* NEWS: Update.
	
	* comsat/comsat.c, dotlock/dotlock.c, examples/muauth.c,
	examples/muemail.c, frm/frm.h, guimb/main.c, imap4d/imap4d.c,
	libargp/auth.c, libargp/cmdline.c, libargp/common.c,
	libargp/gsasl.c, libargp/mu_argp.c, libargp/pam.c,
	libargp/radius.c, libargp/sieve.c, libargp/sql.c, libargp/tls.c,
	libargp/virtdomain.c, maidag/maidag.h, mail/mail.c,
	mail.local/main.c, mail.remote/mail.remote.c, messages/messages.c,
	mimeview/mimetypes.y, mimeview/mimeview.c, movemail/movemail.c, 
	pop3d/extra.c, pop3d/pop3d.c, pop3d/popauth.c, readmsg/readmsg.c,
	sieve/sieve.c: Include mailutils/libargp.h.

	* config/mailutils-config.c: New arguments to --link: cfg and argp.

	* include/mailutils/Makefile.am (pkginclude_HEADERS): Remove
	compat.h, add libargp.h, libcfg.h and version.h
	* include/mailutils/compat.h: Remove
	* include/mailutils/libargp.h: New file (from libargp/cmdline.h)
	* include/mailutils/libcfg.h: New file (from (libcfg/)
	* include/mailutils/version.h: New file

	* include/mailutils/folder.h (struct mu_0_6_folder_list): Remove